# CrossesAndDots

./: CMakeLists.txt  CrossesAndDots.sln  Doxyfile  README.md
CrossesAndDots/: CrossesAndDots.rc  CrossesAndDots.vcxproj  CrossesAndDots.vcxproj.filters  GameField.cpp  GameField.h  GameStateChecker.cpp  GameStateChecker.h  GameStates.h  GoogleTest.cpp  Player.cpp  ScenesBuilder.h
CrossesAndDotsCppUnitTests/: MicrosoftUnitTests.cpp  MicrosoftUnitTests.vcxproj
CrossesAndDotsTests/: CrossesAndDotsTests.vcxproj  GameFieldTests.cpp  GameStateCheckerTests.cpp  ScenesBuilderTests.cpp  test.cpp
Documentation/html/: _game_field_8cpp.html  _game_field_8h.html  _game_field_8h_source.html  _game_state_checker_8cpp.html  _game_state_checker_8h.html  _game_state_checker_8h_source.html  _game_states_8h.html  _game_states_8h_source.html  _player_8cpp.html  _r_e_a_d_m_e_8md.html  _scenes_builder_8h.html  _scenes_builder_8h_source.html  annotated.html  class_game_field-members.html  class_game_field.html  class_game_state_checker-members.html  class_game_state_checker.html  class_game_states-members.html  class_game_states.html  class_scenes_builder-members.html  class_scenes_builder.html  classes.html  dir_f5c9179ebde713f57d5a0396c56b6242.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  md__r_e_a_d_m_e.html  pages.html
GoogleTest/: GoogleTest.vcxproj  test.cpp
MicrosoftUnitTests/: MicrosoftUnitTests.cpp  MicrosoftUnitTests.vcxproj  MicrosoftUnitTests.vcxproj.filters
(+39 files in other folders)
